tests/checker/diagnostics/0979_mli_module_path_unary_overapplied_05.mli.infer.expected
File "0979_mli_module_path_unary_overapplied_05.mli", line 1:
Warning 24 [bad-module-name]: bad source file name: 0979_mli_module_path_unary_overapplied_05 is not a valid module name.

File "0979_mli_module_path_unary_overapplied_05.mli", line 5, characters 16-39:
5 | val x_epsilon : (int, bool) M_epsilon.t
                    ^^^^^^^^^^^^^^^^^^^^^^^
Error: The type constructor M_epsilon.t expects 1 argument(s),
       but is here applied to 2 argument(s)
